Bug 326093 - Spacing-Fuzzy Parameter works incorrectly for some Gimp Brushes.
Summary: Spacing-Fuzzy Parameter works incorrectly for some Gimp Brushes.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-16 12:42 UTC by Paul Geraskin
Modified: 2013-12-05 19:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Geraskin 2013-10-16 12:42:19 UTC
Hi devs.

Some Gimp Brushes work incorrectly With Fuzzy Spacing. If I set Fuzzy Spacing - then i'll get incorrect fuzzy.

See screenshot: http://i.imgur.com/DKqJ0pw.png

Here is the brushes with the issue: https://dl.dropboxusercontent.com/u/26887202/Krita/LJF_Chalk_01.gbr.zip


Talk on IRC:
<dmitryK> mifth: is the size of the gimp brushes the same?
<dmitryK> mifth: i mean is it three different presets or one with different pressure?
<mifth> dmitryK: i change size of the gimp brush. The less size makes such an issue
<dmitryK> mifth: speaking truly, I don't get what the bug is?
<mifth> dmitryK: this is one preset with different size
<mifth> dmitryK: autobrush has no issues. Some Gimp brushes has it.
<dmitryK> mifth: so you mean that the amount Fuzzyness does not change which changing the scale of the brush?
<mifth> dmitryK: yep
<dmitryK> mifth: ok, please report it ;)
Comment 1 Dmitry Kazakov 2013-12-03 10:12:19 UTC
It seems to be not Spacing, but Scatter problem. Spacing works ok, Scatter --- not.
Comment 2 Dmitry Kazakov 2013-12-03 10:49:10 UTC
Git commit a71e6ad5f2eea044ada120198dcf4f0ccf58a309 by Dmitry Kazakov.
Committed on 03/12/2013 at 10:49.
Pushed by dkazakov into branch 'master'.

Fixed Scatter Paint Op option to handle Gimp brushes correctly

The brush scale and rotation should also be taken into account.

M  +7    -6    krita/plugins/paintops/colorsmudge/kis_colorsmudgeop.cpp
M  +4    -1    krita/plugins/paintops/defaultpaintops/brush/kis_brushop.cpp
M  +4    -2    krita/plugins/paintops/libpaintop/kis_pressure_scatter_option.cpp
M  +1    -4    krita/plugins/paintops/libpaintop/kis_pressure_scatter_option.h

http://commits.kde.org/calligra/a71e6ad5f2eea044ada120198dcf4f0ccf58a309
Comment 3 Dmitry Kazakov 2013-12-05 19:57:31 UTC
Git commit fb30ea340f0d1392a0cd7a2040916f9963f48ecc by Dmitry Kazakov.
Committed on 03/12/2013 at 10:49.
Pushed by dkazakov into branch 'calligra/2.8'.

Fixed Scatter Paint Op option to handle Gimp brushes correctly

The brush scale and rotation should also be taken into account.

M  +7    -6    krita/plugins/paintops/colorsmudge/kis_colorsmudgeop.cpp
M  +4    -1    krita/plugins/paintops/defaultpaintops/brush/kis_brushop.cpp
M  +4    -2    krita/plugins/paintops/libpaintop/kis_pressure_scatter_option.cpp
M  +1    -4    krita/plugins/paintops/libpaintop/kis_pressure_scatter_option.h

http://commits.kde.org/calligra/fb30ea340f0d1392a0cd7a2040916f9963f48ecc