Fixed Scatter Paint Op option to handle Gimp brushes correctly

The brush scale and rotation should also be taken into account.

BUG:326093